:bug: Set max height for content to prevent layout shifting and create a top bar variable

--- a/src/app/viewport/viewport.component.scss
+++ b/src/app/viewport/viewport.component.scss
@@ -3,6 +3,8 @@
   position: absolute;
   inset: 0 0 0 0;
   height: 100%;
+
+  --top-bar-height: 60px;
 }
 
 .left-panel {
@@ -12,7 +14,7 @@
 }
 
 .search {
-  height: 59px;
+  height: var(--top-bar-height);
   background: var(--primary);
   color: var(--on-primary);
 
@@ -47,7 +49,7 @@
 }
 
 .top {
-  height: 59px;
+  height: var(--top-bar-height);
   background: var(--primary);
   color: var(--on-primary);
   flex-shrink: 0;
@@ -59,6 +61,7 @@
 
 .content {
   flex: 1 1 auto;
+  max-height: calc(100% - var(--top-bar-height));
 }
 
 
@@ -70,7 +73,7 @@
 
 .custom-left-gutter {
   //This creates a linear gradient that transitions from --on-primary to the --primary color at the 60px mark from top to bottom.
-  background: linear-gradient(to bottom, var(--on-primary) 60px, var(--primary) 60px);
+  background: linear-gradient(to bottom, var(--on-primary) var(--top-bar-height), var(--primary) var(--top-bar-height));
   width: 100%;
   height: 100%;
 }
@@ -147,7 +150,4 @@
 .event-hierarchy {
   height: 100%;
   overflow-x: hidden;
-
-  /* sticky div helper */
-  //overflow-y: auto; //Ensure the sidebar can scroll if content overflows
 }
